Bug 1397040 - During D3D11TextureData::Create lock the device multithread mutex explicitly when accessing the device. r=mattwoodrow, a=lizzard

MozReview-Commit-ID: Ip1c8jnJE7r